--- a/20170619.md
+++ b/20170619.md
@@ -2,4 +2,4 @@
    * 今天主要做的事情是atom的安装和配置，配置的过程见[atom](technology files/atom安装.md)
    * 安装完成后将老师给的cgi-stu文件下载下来，将它建成版本仓库并用atom打开，可以编辑修改
    * 将index.html复制到/var/www/html下可以在localhost打开
-   * 在尝试跑通代码时发现在姓名，性别处输入中文时不能输入，然后就修改输入法问题，重新按原来的方法装不能实现，又在ibus中下载新的中文包，也没能成功，最后也 不知道怎么改的，系统除了桌面其它都不显示了，查找了许多方法都在Ubuntu unity找不回来，最后重新拷贝了老师的系统
+   * 并尝试跑一遍程序
